flowlog-build/tests/errors/catalog/unsafe_variable_in_fn_call.dl
.extern fn is_positive(n: int32) -> bool

.decl Edge(x: int32, y: int32)
.decl Reach(x: int32)
.input Edge(IO="file", filename="Edge.csv", delimiter=",")
.output Reach
Reach(x) :- Edge(x, y), is_positive(z) = True.
